fix vote check overflow

--- a/src/component/Vote/Vote.scss
+++ b/src/component/Vote/Vote.scss
@@ -6,6 +6,7 @@
   }
 
   .zg-vote-check {
+    max-width: 12.5px;
   }
   .zg-points {
     font-size: 20px;
@@ -19,6 +20,7 @@
     }
 
     .zg-vote-check {
+      max-width: 15px;
     }
 
     .zg-points {
